@@ -1,5 +1,2 @@
 class ThreadStatic:
     Done = False
-
-    def Assert(self):
-        Done = True
