@@ -39,3 +39,7 @@
   • Code refactoring.
   • Added script for "console-working".
   • Bugs fixes.
+
+[HotFix] (v1.3 -> 1.3.1)
+  • Proxy working fixed.
+  • Improvements.
